Enable metadata by default

--- a/templates/plugins/ml2/ml2_conf.ini.j2
+++ b/templates/plugins/ml2/ml2_conf.ini.j2
@@ -54,4 +54,5 @@ enable_ipset = True
 ovn_nb_connection = tcp:{{ neutron_ovn_ip }}:6641
 ovn_sb_connection = tcp:{{ neutron_ovn_ip }}:6642
 ovn_l3_scheduler = {{ neutron_ovn_l3_scheduler }}
+ovn_metadata_enabled = True
 {% endif %}
